--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,8 @@
       "maxDuration": 30
     }
   },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ]
+  "outputFileTracingExcludes": {
+    "**/node_modules/@swc/core-linux-x64-gnu/**/*": true,
+    "**/node_modules/@swc/core-linux-x64-musl/**/*": true
+  }
 }
